--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -18,8 +18,10 @@
 
     <script>
         window.alert('First menssage');
-        window.confirm('Está fluindo com JS?')
+        window.confirm('Está fluindo com JS?');
         window.prompt('Qual seu nome?');
+        //comentários
+        /*comentário de mais de uma linha*/
     </script>
 
 </head>
