--- a/aula11/ex010.html
+++ b/aula11/ex010.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Multas</h1>
-    Veloccidade do carro: <input type="number" name="txtvel" id="txtvel"> <Km>
+    Velocidade do carro: <input type="number" name="txtvel" id="txtvel"> <Km>
     <input type="button" value="Verificar" onclick="calcular()">
     <div id="res"></div>
     
