--- a/aula11/ex010b.html
+++ b/aula11/ex010b.html
@@ -7,17 +7,25 @@
     <title>Nacionalidade</title>
 </head>
 <body>
-    <h1>Tu és brasileiro?</h1>
-    Digite onde você nasceu: <input type="text" name="nasc" id="nasc">
-    <input type="button" value="Verificar" onclick="verificar()">
-    <div id="resposta"></div>
+        <h1>Teste de nacionalidade</h1>
+        Digite onde nasceu: <input type="text" name="nasceu" id="nasceu">
 
-    <script>
+        <input type="button" value="verificar" onclick="checar()">
 
-        function verificar(){
+        <div id="res"></div>
 
-        }
-    </script>
-    
+        <script>
+            function checar(){
+                var txtpais = document.getElementById ('nasceu').value
+                var res = document.getElementById ('res')
+                res.innerHTML =  `<p>Você digitou ${txtpais}</p>`
+            if (txtpais == 'Brasil' ||txtpais == 'brasil') {
+            res.innerHTML += `<p>Voce é brasileiro</p>`
+       } else {
+            res.innerHTML +=  `<p>Você é extrageiro, bem vindo</p>`
+       }
+
+            }
+        </script>
 </body>
 </html>
