--- a/aula14ex/ex017/ex0.html
+++ b/aula14ex/ex017/ex0.html
@@ -9,11 +9,18 @@
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Tabuada</h1>
     </header>
     <section>
-        <div></div>
-        <div></div>
+        <div>
+            <p>Número: <input type="number" name="txtnum" id="txtnum"></p>
+            <p><input type="button" value="Gerar Tabela" onclick="contar()"></p>
+        </div>
+        <div>
+            <select name="tabuada" id="seltab" size="10"> 
+                <option >Digite um número acima...</option>
+            </select>
+        </div>
 
     </section>
     <footer>
