cronometro sem hora

--- a/cronômetro/index.html
+++ b/cronômetro/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modelo de Exercício</title>
     <link rel="stylesheet" href="style.css">
+    <!-- incluir horas -->
 </head>
 <body>
     <header>
         <h1>Cronometro JS</h1>
     </header>
     <section>
+
         <p>
         <span id="minutos">00</span>
         :
